--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "^4.15.4",
+    "express-promise": "^0.4.0",
+    "express-promise-router": "^2.0.0",
+    "moment": "^2.18.1",
     "morgan": "^1.8.2",
+    "node-yaml-config": "0.0.4",
+    "promise": "^8.0.1",
     "pug": "~2.0.0-beta11",
-    "serve-favicon": "^2.4.3"
+    "serve-favicon": "^2.4.3",
+    "wunderground-pws": "^1.3.1",
+    "wundergroundnode": "^0.11.0"
   }
 }
