--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
     "morgan": "^1.8.2",
+    "node-file-cache": "^1.0.2",
     "node-yaml-config": "0.0.4",
     "promise": "^8.0.1",
     "pug": "~2.0.0-beta11",
