--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "debug": "~2.6.3",
     "express": "^4.15.4",
     "firebase-admin": "^5.2.1",
+    "ical": "^0.5.0",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
     "morgan": "^1.8.2",
     "node-file-cache": "^1.0.2",
+    "node-google-calendar": "^1.1.0",
     "node-yaml-config": "0.0.4",
     "promise": "^8.0.1",
     "pug": "~2.0.0-beta11",
