--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "coffee-script": "^1.12.7",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "^4.15.4",
+    "express.io": "^1.1.13",
     "firebase-admin": "^5.2.1",
     "ical": "^0.5.0",
     "moment": "^2.18.1",
