--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.3",
     "express": "^4.15.4",
     "firebase-admin": "^5.2.1",
+    "googleapis": "^21.3.0",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
     "morgan": "^1.8.2",
